deploy/manifests/openmarketcap-webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hellocloud
  name: hellocloud
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: hellocloud
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hellocloud
    spec:
      containers:
      - name: hellocloud
        # After a few rounds of testing, it looks like the web app is primarily
        # CPU-constrained. Boosting memory didn't make much of a difference,
        # but boosting the CPU request from the default 100m to 1000m brought
        # the BTC page load time down from 4-5s to 2s. Increasing it further
        # above 1000m (i.e. one CPU core) didn't make it faster.
        resources:
          requests:
            memory: "128Mi"
            cpu: "1000m"
          limits:
            memory: "512Mi"
            cpu: "2000m"
        args:
        - npm
        - run
        - start
        image: gcr.io/dirthub/hellocloud:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
          protocol: TCP
      - name: esp
        image: gcr.io/endpoints-release/endpoints-runtime:1
        args: [
          "--http_port", "8081",
          "--backend", "127.0.0.1:8000",
          "--service", "hellocloud.endpoints.flipthetable.cloud.goog",
          "--rollout_strategy", "managed",
        ]
        ports:
        - containerPort: 8081
          protocol: TCP
        imagePullPolicy: IfNotPresent
