deploy/manifests/hellocloud-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hellocloud-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: hellocloud-ip
  labels:
    app: hellocloud
spec:
  backend:
    serviceName: hellocloud-service
    servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hellocloud-service
  labels:
    app: hellocloud
spec:
  type: NodePort
  selector:
    app: hellocloud
  ports:
    - port: 80
      targetPort: 8080
